# FrameFlow

./: .gitignore  CMakeLists.txt  FrameFlow.pro  LICENSE  README.md  build.ps1  build.sh
FrameFlowLauncher/: main.cpp
Src/: CMakeLists.txt  FrameFlow.pro  FrameFlowSplashScreen.h  IOutputFile.h  Resources.qrc  Src.pro  Strings.h  TestingResources.qrc  Tests.pro  Types.h  aboutDialog.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  exportdialog.ui.autosave  giffile.cpp  giffile.h  htmlgallery.cpp  htmlgallery.h  iconthememanager.cpp  iconthememanager.h  imagecollage.cpp  imagecollage.h  imagedelegate.cpp  imagedelegate.h  imagemodel.cpp  imagemodel.h  imagesprite.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputfilefactory.cpp  outputfilefactory.h  pdffile.cpp  pdffile.h  progressdialog.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+2 more)
Src/Forms/: mainwindow.ui  progressdialog.ui  settingsdialog.ui
Src/Include/: FrameFlowSplashScreen.h  IOutputFile.h  Types.h  aboutDialog.h  htmlgallery.h  iconthememanager.h  imagemodel.h  mainwindow.h  outputfilefactory.h  pdffile.h  progressdialog.h  settingsdialog.h  videofile.h
Src/Resources/Theme/: Dark.qss  Default.qss  Light.qss
Src/Resources/Translations/: frameflow_en.qm  frameflow_ml.qm
Src/Source/: exportdialog.cpp  giffile.cpp  htmlgallery.cpp  imagemodel.cpp  imagesprite.cpp  mainwindow.cpp  outputfilefactory.cpp  pdffile.cpp  progressdialog.cpp  settingsdialog.cpp  videofile.cpp
Src/Tests/: tst_frameflow.cpp
Src/Translation Strings/: frameflow_en.ts  frameflow_ml.ts
app/: CMakeLists.txt  Resources.qrc  frameflow.cpp  frameflow.h  frameflow.ui  main.cpp
app/Resources/Theme/: Dark.qss  Default.qss  Light.qss
app/forms/: appearancedialog.ui  frameflow.ui  gifattributesdialog.ui  imagespriteattributesdialog.ui  languagedialog.ui  saveprogressdialog.ui  videoattributesdialog.ui
app/include/: aboutDialog.h  appearancedialog.h  frameflow.h  frameflowstrings.h  gifattributesdialog.h  imagedelegate.h  imagemodel.h  imagespriteattributesdialog.h  languagedialog.h  saveprogressdialog.h  thememanager.h  videoattributesdialog.h
app/src/: appearancedialog.cpp  frameflow.cpp  gifattributesdialog.cpp  imagespriteattributesdialog.cpp  languagedialog.cpp  saveprogressdialog.cpp  thememanager.cpp  videoattributesdialog.cpp
common/: Types.h
docs/: index.html
flatpak/: io.github.vivx701.FrameFlow.yml
frameflow-writer/: CMakeLists.txt
frameflow-writer/include/: IOutputFile.h  Types.h  frameflow-writer_global.h  frameflowexception.h  frameflowwriter.h  giffile.h  imagesprite.h
frameflow-writer/src/: frameflowwriter.cpp  giffile.cpp  imagesprite.cpp  videofile.cpp
frameflow-writer/tests/: CMakeLists.txt  TestFrameFlowWriter.cpp  TestFrameFlowWriter.h
installer/flatpak/: io.github.vivx701.FrameFlow.desktop  io.github.vivx701.FrameFlow.metainfo.xml  io.github.vivx701.FrameFlow.yml
installer/qtInstaller/: build-installer.sh  build_installer.ps1
installer/qtInstaller/config/: config.xml
tests/: CMakeLists.txt
translations/: FrameFlow_ml_IN.ts
